--- a/src/js/RouterFile.css
+++ b/src/js/RouterFile.css
@@ -16,9 +16,8 @@ body {
 
 .container {
 
-    height: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: center;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
 }
