--- a/src/js/components/footer/footer.css
+++ b/src/js/components/footer/footer.css
@@ -1,12 +1,26 @@
-footer {
+.footer {
 
-    width: 80%;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    height: 96px;
-    margin: auto;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    bottom: 0;
+width: 100%;
+display: flex;
+height: 96px;
+position: absolute;
+clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+border: 1px solid white;
+justify-content: center;
+align-items: center;
+flex-direction: row;
 
+}
+
+.footer > p {
+
+    color: white;
+    font-family: 'Star Wars', sans-serif;
+    
+
+}
+
+.fa-github {
+
+    color: white;
 }
